# aula16_bootcamp

./: README.md  cep.db  controller.py  db.py  main.py  models.py  pyproject.toml  schema.py
api_pokemon/: controller1.py  db1.py  main1.py  models1.py  pokemon.db  schema1.py
